<resources>
    <string name="app_name">AbcJobsNav</string>
    <string name="abc_jobs">ABC Jobs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="change">Change</string>
    <string name="ToDo">To Do</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_field">Required Field!</string>
    <string name="login_unsuccessful_incorrect_password">Login Unsuccessful: Incorrect Password</string>
    <string name="login_unsuccessful_wrong_user_name">Login Unsuccessful: Wrong user name</string>
    <string name="login_unsuccessful">Login Unsuccessful: Network Error!!</string>
    <string name="password_can_t_be_less_than_6">password can\'t be less than 6</string>
    <string name="required_at_least_1_digit">Required at least 1 digit</string>
    <string name="password_must_contain_upper_and_lower_case_letters">Password must contain upper and lower case letters</string>
    <string name="_1_special_character_required">1 special character required</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="signup_unsuccessful">Signup Unsuccessful</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="invalid_date_yyyy_mm_dd">Invalid Date!: YYYY-MM-DD</string>
    <string name="invalid_date_over_18">Invalid Date!: Over 18</string>
    <string name="successfully_created_candidate">Candidate could not be created</string>
    <string name="candidate_not_recovered">candidate not recovered</string>
    <string name="required_username">Required UserName!!</string>
    <string name="required_password">Required Password!!</string>
    <string name="required_password_repeat">Required PassWord Repeat!!</string>
    <string name="required_name">Required Name!</string>
    <string name="required_lastname">Required LastName!</string>
    <string name="required_document">Required Document!</string>
    <string name="required_email">Required Email!</string>
    <string name="login_title">Login</string>
    <string name="hint_login_username">UserName</string>
    <string name="helper_login_username">type the user name</string>
    <string name="hint_login_password">PassWord</string>
    <string name="helper_login_password">Type the password</string>
    <string name="login_submit">Submit</string>
    <string name="don_t_have_an_account_sign_up">Do not have an account? Sign up</string>
    <string name="Forgot_your_password">You forgot the password?</string>
    <string name="signup_title">Signup</string>
    <string name="hint_signup_username">User Name</string>
    <string name="helper_signup_username">type the user name</string>
    <string name="hint_signup_password">PassWord</string>
    <string name="helper_signup_password">minimun 5, maximun 15</string>
    <string name="hint_signup_password_confirm">Repeat Password</string>
    <string name="helper_signup_password_confirm">minimun 5, maximun 15</string>
    <string name="user_type">User Type</string>
    <string name="candidate_type">Candidate</string>
    <string name="company_type">Company</string>
    <string name="abcjob_employee_type">ABCJob Employee</string>
    <string name="signup_submit">Submit</string>
    <string name="already_a_member_log_in">Already a member? Log In</string>
    <string name="create_candidate_title">Create Candidate</string>
    <string name="create_candidate_hint_name">Name</string>
    <string name="create_candidate_helper_name">Type the candidate\'s name</string>
    <string name="create_candidate_hint_lastname">LastName</string>
    <string name="create_candidate_helper_lastname">Type the candidate\'s last name</string>
    <string name="create_candidate_hint_document">Document</string>
    <string name="create_candidate_helper_document">Only numbers</string>
    <string name="create_candidate_hint_birthday">BirthDay</string>
    <string name="create_candidate_helper_birthday">YYYY-MM-DD, Over 18 years</string>
    <string name="create_candidate_hint_email">Email</string>
    <string name="create_candidate_helper_email">Candidate\'s email address</string>
    <string name="create_candidate_hint_phone">Phone</string>
    <string name="create_candidate_helper_phone">Enter contact phone number</string>
    <string name="create_candidate_hint_city">City</string>
    <string name="create_candidate_helper_city">City of residence</string>
    <string name="create_candidate_hint_address">Address</string>
    <string name="create_candidate_helper_address">Residence Address</string>
    <string name="create_candidate_submit">Submit</string>
    <string name="candidate_title">Candidate</string>
    <string name="candidate_document">Document:</string>
    <string name="candidate_birthday">BirthDay:</string>
    <string name="candidate_email">EMail:</string>
    <string name="candidate_phone">Phone:</string>
    <string name="candidate_city">City:</string>
    <string name="candidate_address">Address:</string>
    <string name="candidate_interviews">Interviews</string>
    <string name="candidate_tests">Tests</string>
    <string name="candidato_image">Candidate Image</string>
    <string name="candidate_interviews_title">List of Interviews</string>
    <string name="candidate_interviews_datetime">DateTime:</string>
    <string name="candidate_interviews_profile">Profile:</string>
    <string name="candidate_interviews_project">Project:</string>
    <string name="candidate_interviews_company">Company:</string>
    <string name="candidate_interviews_contact">Contact:</string>
    <string name="no_interviews_were_found">No interviews were found</string>
    <string name="interview_list_not_retrieved">Interview list not retrieved</string>
    <string name="result_interview_title">Interview</string>
    <string name="result_interview_datetime">DateTime:</string>
    <string name="result_interview_profile">Profile:</string>
    <string name="result_interview_project">Project:</string>
    <string name="result_interview_company">Company:</string>
    <string name="result_interview_contact">Contact:</string>
    <string name="result_interview_result">Result</string>
    <string name="result_interview_evaluation">Evaluation:</string>
    <string name="result_view_annotations">Annotations</string>
    <string name="interview_not_retrieved">Interview not retrieved</string>
    <string name="company_title">Company</string>
    <string name="candidato">Candidate</string>
    <string name="contacto">Contact</string>
    <string name="Titulo_entrevistas">Interviews of Candidate</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="password">PassWord</string>
    <string name="olvidaste_la_clave">You forgot the password?</string>
    <string name="inscribete"><u>Sign Up</u></string>
    <string name="title_login">Login</string>
    <string name="navegar">navegar</string>
    <string name="datos_candidato">Candidate Data</string>
    <string name="interviews">Interviews</string>
    <string name="tests">Tests</string>
    <string name="company_contact">Contact:</string>
    <string name="company_phone">Phone:</string>
    <string name="company_email">Email:</string>
    <string name="company_country">Country:</string>
    <string name="company_city">City:</string>
    <string name="company_address">Address:</string>
    <string name="company_qualifications">qualifications</string>
    <string name="company_assignment">assignment</string>
    <string name="company_not_recovered">Company not recovered</string>
    <string name="jobs_list_not_retrieved">Jobs List not retrieved</string>
    <string name="no_jobs_were_found">No Jobs were found</string>
    <string name="list_of_jobs">List of Jobs</string>
    <string name="Qualy_candidate">Candidate:</string>
    <string name="qualy_date_of_admission">Date of admission:</string>
    <string name="qualy_employee">Employee</string>
    <string name="list_of_jobs_without_assignment">List of jobs without assignment</string>
    <string name="no_evaluations_were_found">No evaluations were found</string>
    <string name="evaluations_list_not_retrieved">Evaluations list not retrieved</string>
    <string name="monthly_evaluations">Monthly evaluations</string>
    <string name="evaluations">Evaluations</string>
    <string name="evals_add">Add</string>
    <string name="create_evaluation_title">Create Evaluation</string>
    <string name="evaluation_could_not_be_created">Evaluation could not be created</string>
    <string name="valuation_required">Valuation required!</string>
    <string name="createeval_year">Year</string>
    <string name="not_editable">Not editable</string>
    <string name="evalcreate_month">Month</string>
    <string name="select_value">Select Value</string>
    <string name="enter_your_comments">Enter your comments</string>
    <string name="evalcreate_note">Note</string>
    <string name="evalcreate_valuation">Valuation</string>
    <string name="creaeval_type_your_notes">Type your notes</string>
    <string name="createeval_required_notes">Required Notes</string>
    <string name="year_not_editable">Year not editable</string>
    <string name="month_not_editable">Month not editable</string>
    <string name="could_not_retrieve_list_of_matched_candidates">Could not retrieve list of matched candidates</string>
    <string name="cumplen_candidate">Candidate</string>
    <string name="tech_skills">Tech Skills:</string>
    <string name="soft_skills">Soft Skills:</string>
    <string name="pers_skills">Pers Skills:</string>
    <string name="cumplen_birthday">BirthDay</string>
    <string name="cumple_valuation">Valuation</string>
    <string name="cumplen_photo">Photo</string>
    <string name="list_of_candidates_who_meet">Select a candidate</string>
    <string name="cumplen_assign">Assign</string>
    <string name="cumplen_back">Back</string>
    <string name="cumplen_profile">Profile:</string>
    <string name="cumplen_project">Project:</string>
    <string name="cumplen_initial_date">initial date:</string>
    <string name="assignment_successfully_completed">Assignment successfully completed</string>
    <string name="select_a_candidate">Select a candidate</string>
    <string name="back_to_company">Back to Company</string>
    <string name="evals_month">Month:</string>
    <string name="evals_year">Year:</string>
    <string name="evals_valuation">Valuation:</string>
    <string name="qualy_assigned_on">Assigned on</string>
    <string name="empresa_interviews">Interviews</string>
    <string name="empresa_type">Type:</string>
    <string name="EVsEmp_filters">Filters</string>
    <string name="param_apply">Apply</string>
    <string name="EvEmpresa_candidate">Candidate:</string>
    <string name="ResultEV_back">Back</string>
    <string name="back_to_candidate">Back to candidate</string>
    <string name="ABC_assignment">Assignment</string>
    <string name="ABC_interviews">Interviews</string>
    <string name="ABC_tests">Tests</string>
    <string name="asignaabc_back_to_jobs">Back to Jobs</string>
    <string name="jobsabc_filters">Filters</string>
    <string name="abc_apply_filters">Apply</string>
    <string name="abc_cancel_filters">Cancel</string>
    <string name="abc_filters">Filters</string>
    <string name="abc_param_project">Project</string>
    <string name="abcjobs_inicio_de_proyecto">Init:</string>
    <string name="abcjobs_num">No:</string>
    <string name="abcjobs_nav_previous_item">Previous Item</string>
    <string name="abcjobs_nav_next_item">Next Item</string>
    <string name="qualy_param_profile">Profile</string>
    <string name="qualy_param_company">Company</string>
</resources>