<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    tools:context=".ui.SignupFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/signup_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textMatNameUser"
                app:startIconDrawable="@drawable/usuario_24"
                app:endIconMode="clear_text"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_signup_username"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_signup_username"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:contentDescription=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtMatPassword"
                app:startIconDrawable="@drawable/candado_24"
                app:endIconMode="password_toggle"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_signup_password"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_signup_password"
                app:counterEnabled="true"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtMatPasswordAgain"
                app:startIconDrawable="@drawable/candado_24"
                app:endIconMode="password_toggle"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_signup_password_confirm"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_signup_password_confirm"
                app:counterEnabled="true"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/user_type"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_marginTop="5dp"
                android:paddingVertical="0dp"
                android:layout_marginVertical="0dp"
                android:theme="@style/Theme.Material3.DayNight"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="0dp"
                    android:paddingVertical="0dp"
                    android:text="@string/candidate_type"/>
                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="0dp"
                    android:paddingVertical="0dp"
                    android:enabled="false"
                    android:text="@string/company_type"/>
                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="0dp"
                    android:paddingVertical="0dp"
                    android:enabled="false"
                    android:text="@string/abcjob_employee_type"/>
            </RadioGroup>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signup_submit"
                />

            <Button
                android:id="@+id/textButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false"
                android:text="@string/already_a_member_log_in" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>