<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical"
    tools:context=".ui.CrearCandidatoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/titleCreateCand"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_candidate_title"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/padreScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnCreate"
        app:layout_constraintTop_toBottomOf="@id/titleCreateCand">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtMatName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_candidate_hint_name"
                    android:textColorHint="@color/black"
                    android:paddingVertical="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/create_candidate_helper_name"
                    app:helperTextEnabled="true"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/face_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="30"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtMatLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_candidate_hint_lastname"
                    android:textColorHint="@color/black"
                    android:paddingVertical="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/create_candidate_helper_lastname"
                    app:helperTextEnabled="true"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/face_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="30"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtMatDocument"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_candidate_hint_document"
                    android:textColorHint="@color/black"
                    android:paddingVertical="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/create_candidate_helper_document"
                    app:helperTextEnabled="true"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/numbers_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/document"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:contentDescription=""
                        android:maxLength="10"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtMatEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_candidate_hint_email"
                    android:textColorHint="@color/black"
                    android:paddingVertical="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="40"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/create_candidate_helper_email"
                    app:helperTextEnabled="true"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:maxLength="40"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtMatFechaNac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_candidate_hint_birthday"
                    android:textColorHint="@color/black"
                    android:paddingVertical="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/create_candidate_helper_birthday"
                    app:helperTextEnabled="true"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/date_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fechanac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="10"
                        android:inputType="date"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtMatPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_candidate_hint_phone"
                    android:textColorHint="@color/black"
                    android:paddingVertical="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/create_candidate_helper_phone"
                    app:helperTextEnabled="true"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="15"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtMatCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_candidate_hint_city"
                    android:textColorHint="@color/black"
                    android:paddingVertical="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="40"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/create_candidate_helper_city"
                    app:helperTextEnabled="true"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/city_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:maxLength="40"
                        android:backgroundTint="@color/GrisClaro"
                        android:textColor="@color/black"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtMatAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_candidate_hint_address"
                    android:textColorHint="@color/black"
                    android:paddingVertical="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="50"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="@string/create_candidate_helper_address"
                    app:helperTextEnabled="true"
                    app:counterTextColor="@color/black"
                    app:helperTextTextColor="@color/black"
                    android:background="@color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/location_on_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription=""
                        android:maxLength="50"
                        android:backgroundTint="@color/GrisClaro"
                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_candidate_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>